[package]
name = "battle-for-the-net"
version = "0.1.0"
edition = "2024"

[features]
default = [
	# "desktop", 
	"bevy/default"
]
# web = ["dioxus/web"]
# desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]
headless_ci = [
	## 0.17
	# "bevy/bevy_ci_testing",
	# "bevy/android-game-activity",
	# "bevy/android_shared_stdcxx",
	# "bevy/animation",
	# "bevy/async_executor",
	# "bevy/bevy_anti_alias",
	# "bevy/bevy_asset",
	# "bevy/bevy_audio",
	# "bevy/bevy_camera",
	# "bevy/bevy_color",
	# "bevy/bevy_core_pipeline",
	# "bevy/bevy_gilrs",
	# "bevy/bevy_gizmos",
	# "bevy/bevy_gltf",
	# "bevy/bevy_image",
	# "bevy/bevy_input_focus",
	# "bevy/bevy_light",
	# "bevy/bevy_log",
	# "bevy/bevy_mesh",
	# "bevy/bevy_mesh_picking_backend",
	# "bevy/bevy_pbr",
	# "bevy/bevy_picking",
	# "bevy/bevy_post_process",
	# "bevy/bevy_render",
	# "bevy/bevy_scene",
	# "bevy/bevy_shader",
	# "bevy/bevy_sprite",
	# "bevy/bevy_sprite_picking_backend",
	# "bevy/bevy_sprite_render",
	# "bevy/bevy_state",
	# "bevy/bevy_text",
	# "bevy/bevy_ui",
	# "bevy/bevy_ui_picking_backend",
	# "bevy/bevy_ui_render",
	# "bevy/bevy_window",
	# "bevy/bevy_winit",
	# "bevy/custom_cursor",
	# "bevy/debug",
	# "bevy/default_font",
	# "bevy/hdr",
	# "bevy/ktx2",
	# "bevy/multi_threaded",
	# "bevy/png",
	# "bevy/reflect_auto_register",
	# "bevy/smaa_luts",
	# "bevy/std",
	# "bevy/sysinfo_plugin",
	# "bevy/tonemapping_luts",
	# "bevy/vorbis",
	# "bevy/wayland",
	# "bevy/webgl2",
	# "bevy/x11",
	# "bevy/zstd_rust",

	## 0.18
	"bevy/2d",
	"bevy/3d",
	"bevy/ui",
	"bevy/default_platform",
	"bevy/common_api",
	"bevy/bevy_ci_testing",
	# "bevy/",
	# "bevy/",
	# "bevy/",
	# "bevy/",
	# "bevy/",
	# "bevy/",
	# "bevy/",
	# "bevy/",
	# "bevy/",
]

[dependencies]
bevy = { version = "0.18", features = ["png"], default-features=false }
bevy_common_assets = { version = "0.14", features = ["json", "ron", "toml"] }
# noise = { version = "0.9.0", features = ["std"] }
# rand = "0.9.2"
# the bellow iyes_progress dep causes the compilation of stylo@0.8.0 to fail for unknown reasons.
# iyes_progress = { version = "0.15", features = ["assets", "async", "debug"] }
# rustc-hash = { version = "2.1.1", features = ["nightly"] }
# rustc-hash = { version = "2.1.1", }
# serde = { version = "1.0.228", features = ["derive"] }
# log = { version = "0.4.29", features = ["std"] }
# crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
bevy_skein = "0.5.0"
bevy_northstar = "0.6.1"
bevy_asset_loader = { version = "0.25.0", features = ["2d"] }
# iyes_progress = { version = "0.16.0", features = ["assets", "async", "debug"] }
# bevy_ecs_tilemap = { version = "0.18.1", features = ["serde"] }
# tiled = "0.15"
# thiserror = "2.0"
bevy_ecs_tiled = { version = "0.11.3", features = ["debug"] }
bevy-inspector-egui = "0.36.0"
avian3d = "0.6.0"
bevy-tnua-avian3d = "0.11.0"
bevy-tnua = "0.30.0"

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

